# xpr

./: .clang-format  .gitignore  CMakeLists.txt  Common.mk  Config.mk  ConfigToolchain.mk  INSTALL.md  Makefile  README.md  configuration.json  tree  xpr.pc
benchmarks/: CMakeLists.txt  Makefile  benchmark.c  example.265.framed  example.aac.framed  list-basic.c  rtsp-conn-open-close.c  rtsp-conn-rx-264-with-log.c  rtsp-conn-rx-264.c  rtsp-conn-rx-aac.c  rtsp-conn-start-stop.c  rtsp-mgr-open-close.c  rtsp-mgr-start-stop.c  rtsp-svr-tx-264-with-auth.c  rtsp-svr-tx-264-with-log.c  rtsp-svr-tx-264.c  rtsp-svr-tx-265.c  rtsp-svr-tx-aac.c  thread-create-destroy.c  timer-basic.c
cmake/: Config.cmake.in
contrib/vc14/include/live/: BasicUsageEnvironment.hh
contrib/vc14/lib/x64/: BasicUsageEnvironment-mt-s-vc140.lib  BasicUsageEnvironment-mt-s-vc140d.lib  UsageEnvironment-mt-s-vc140.lib  UsageEnvironment-mt-s-vc140d.lib  avcodec.lib  avdevice.lib  avfilter.lib  avformat.lib  avresample.lib  avutil.lib  groupsock-mt-s-vc140.lib  groupsock-mt-s-vc140d.lib  swscale.lib
contrib/vc14/lib/x86/: BasicUsageEnvironment-mt-s-vc140.lib  BasicUsageEnvironment-mt-s-vc140d.lib  UsageEnvironment-mt-s-vc140.lib  UsageEnvironment-mt-s-vc140d.lib  avcodec.lib  avdevice.lib  avfilter.lib  avformat.lib  avresample.lib  avutil.lib  groupsock-mt-s-vc140.lib  groupsock-mt-s-vc140d.lib  swscale.lib
docs/: Doxyfile  Makefile
docs/develop/: README.md
docs/man/: Doxyfile  Makefile  refman.tex.patch
examples/: CMakeLists.txt  Makefile  plugin_framework.c
examples/plugins/: CMakeLists.txt  Makefile  plugin_a.c  plugin_b.c  plugin_c.c  plugin_d.c  plugin_e.c  plugin_f.c  plugin_g.c
examples/plugins/web/: Config.h  DeviceInfo.c  DeviceInfo.h  Event.c  Event.h  Geographic.c  Geographic.h  Image.c  Image.h  Makefile  Network.c  Network.h  Osd.c  Osd.h  Ptz.c  Ptz.h  Serial.c  Serial.h  Stream.c  Stream.h  SystemAudio.c  SystemAudio.h  SystemTime.c  SystemTime.h  mongoose.c  mongoose.h  psia.c  websvr.c  websvr.p
extra/msvc2012/: fifo_test.vcxproj  libxpr.vcxproj  libxpr.vcxproj.filters  mcdec_demo.vcxproj  mcdec_demo.vcxproj.filters  mcvr_demo.vcxproj  test_fifo.vcxproj  test_mcdec.vcxproj  test_mcdec.vcxproj.filters  test_mcvr.vcxproj  xpr.sln
extra/msvc2013/: fifo_test.vcxproj  libxpr.vcxproj  libxpr.vcxproj.filters  mcdec_demo.vcxproj  mcvr_demo.vcxproj  test_fifo.vcxproj  test_mcdec.vcxproj  test_mcvr.vcxproj  xpr.sln
extra/msvc2015/: libxpr.vcxproj  libxpr.vcxproj.filters  test_fifo.vcxproj  test_fq.vcxproj  test_json.vcxproj  test_mcdec.vcxproj  test_mcvr.vcxproj  test_rtsp.vcxproj  test_rtsp_client.filters  test_rtsp_client.vcxproj  test_utils.vcxproj  xpr.sln
include/xpr/: xpr.h  xpr_adc.h  xpr_arp.h  xpr_arr.h  xpr_atomic.h  xpr_avframe.h  xpr_base64.h  xpr_bitvector.h  xpr_common.h  xpr_config.h  xpr_config.h.in  xpr_config_win32.h  xpr_crc.h  xpr_devcaps.h  xpr_dpu.h  xpr_dpu_options.h  xpr_dpupriv.h  xpr_drm.h  xpr_errno.h  xpr_fifo.h  xpr_file.h  xpr_fq.h  xpr_gpio.h  xpr_h264.h  xpr_hashtable.h  xpr_icmp.h  xpr_json.h  xpr_list.h  xpr_log.h  xpr_mcdec.h  xpr_mcvr.h  xpr_md5.h  xpr_mem.h  xpr_meta.h  xpr_oeis.h  xpr_onvif.h  xpr_osd.h  xpr_pes.h  xpr_plugin.h  xpr_pluginpriv.h  (+15 more)
src/: CMakeLists.txt  Makefile  Modules.local  Modules.mk  libxpr.def  libxpr.rc  libxpr.sym  libxpr_rtsp.sym  resource.h  xpr_adc.c  xpr_arp_unix.c  xpr_arp_win32.c  xpr_arr.c  xpr_avframe.c  xpr_base64.c  xpr_bitvector.c  xpr_crc.c  xpr_devcaps.c  xpr_dpu.c  xpr_dpu_options.c  xpr_dpu_options.h  xpr_drm.c  xpr_fifo.c  xpr_file.c  xpr_file_unix.c  xpr_file_win32.c  xpr_fq.c  xpr_gpio.c  xpr_h264.c  xpr_hashtable.c  xpr_icmp_unix.c  xpr_icmp_win32.c  xpr_json.c  xpr_list.c  xpr_log.c  xpr_mcdec.c  xpr_mcvr.c  xpr_mcvr.cpp  xpr_mcvr_channelattribute.cpp  xpr_mcvr_d3dchannel.cpp  (+40 more)
src/drivers/adc/: a5s.c
src/drivers/dpu/: a5svideo.c  a5syuv.c  alsapcm.c  g711test.c  mdsd.c  pcmtest.c
src/drivers/drm/: aes_private_keys.i  alpuc-016.c  at24c02.c  ds18b20.c  reconball.c
src/drivers/gpio/: a5s.c
src/drivers/mcdec/libav/: mcdec.c  runtime.c  runtime.h  task.c  task.h  worker.c  worker.h
src/drivers/mcvr/d3d9/: autolock.hpp  channelattribute.cpp  channelattribute.hpp  d3dchannel.cpp  d3dchannel.hpp  d3drenderer.cpp  d3drenderer.hpp  effect_2_0.fx  effect_2_0.fx1  effect_3_0.fx  effect_3_0.fx1  linepainter.cpp  linepainter.hpp  mcvr.cpp  memcpy.cpp  memcpy.h  safefree.hpp  semaphore.cpp  semaphore.hpp  singleevent.cpp  singleevent.hpp  sourcetexture.cpp  sourcetexture.hpp  textwriter.cpp  textwriter.hpp
src/drivers/rtsp/live/: rtsp.cpp  rtsp.hpp  rtsp_client.cpp  rtsp_client.hpp  rtsp_client1.cpp  rtsp_connection.cpp  rtsp_connection.hpp  rtsp_connectionmanager.cpp  rtsp_connectionmanager.hpp  rtsp_framemerger.cpp  rtsp_framemerger.hpp  rtsp_server.cpp  rtsp_server.hpp  rtsp_worker.cpp  rtsp_worker.hpp
src/drivers/ups/: cam_img.c  fakeroot.c  root.c  sys_info.c  sys_net.c
tests/: CMakeLists.txt  Makefile  configuration.json  doc.xml  example.json  fifo.c  file.c  fq.c  hashtable.c  json.c  mcdec.c  qsort.c  real.c  realpath.c  regex.c  rtsp.c  rtsp_client.c  sha1.c  struct.c  test.c  test.json  thread.c  ups-basic.c  ups.c  utils.c  xml.c
tools/: CMakeLists.txt  unframed.c
